# Lichess-Searcher

./: main.py  printy.py  pyproject.toml
